[project]
name = "healthcare"
description = "Modern, Open Source HIS built on Frappe and ERPNext"
authors = [
    { name = "earthians Health Informatics Pvt. Ltd.", email = "info@earthianslive.com" },
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "responses==0.23.1",
  "python-barcode~=0.13.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
known_frappe = ["frappe"]
known_erpnext = ["erpnext"]
known_healthcare = ["healthcare"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "HEALTHCARE", "FIRSTPARTY", "LOCALFOLDER"]
